--- a/common-lib/pom.xml
+++ b/common-lib/pom.xml
@@ -9,13 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>training</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>training-api</module>
-        <module>training-core</module>
-    </modules>
+    <artifactId>common-lib</artifactId>
 
 
 </project>
