--- a/lessons-service/pom.xml
+++ b/lessons-service/pom.xml
@@ -9,14 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>config</artifactId>
+    <artifactId>lessons-service</artifactId>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>lessons-api</module>
+        <module>lessons-core</module>
+    </modules>
 
 
 </project>
