--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,10 @@
 
     <modules>
         <module>eureka</module>
-        <module>config</module>
-        <module>training</module>
-        <module>lessons</module>
+        <module>config-service</module>
+        <module>training-service</module>
+        <module>lessons-service</module>
+        <module>common-lib</module>
     </modules>
 
     <properties>
